--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <title>Zaha's Teams</title>
     <link rel="icon" href="images/logo.png" type="image/png">
     <meta charset="utf-8">
+    <base href="/team2/">
+<script src="_next/static/chunks/main-627138c22ebf06ea.js" defer></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style
         data-href="https://fonts.googleapis.com/css2?family=Livvic:wght@100;200;300;400;500;600;700&family=Oswald:wght@400;500;600;700&display=swap">
