--- a/Ar.html
+++ b/Ar.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     
-    <!-- Dubai Font from Google Fonts -->
+    <!-- Dubai Font from Google Fonts --->
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Naskh+Arabic:wght@400;500;600;700&family=Lateef:wght@400;700&family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/devicon.min.css">
