--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/devicon.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/ApiBot.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
@@ -494,6 +495,8 @@
             unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
         }
     </style>
+
+    
 </head>
 
 <body>
@@ -1029,6 +1032,58 @@
     </div>
     <script id="__NEXT_DATA__"
         type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"RG84QNVIK3BfReEx2Rz2-","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
+
+<!-- Chatbot Widget -->
+<div id="chatbot-container">
+  <!-- Toggle Button -->
+  <button id="chatbot-toggle" class="chatbot-toggle">
+    <i class="fa-regular fa-comments"></i>
+    <span class="notification-dot"></span>
+  </button>
+
+  <!-- Chat Window -->
+  <div id="chatbot-window" class="chatbot-window">
+    <!-- Header -->
+    <div class="chatbot-header">
+      <div class="chatbot-avatar">
+        <img src="images/logo.png" alt="Zaha Chatbot" />
+      </div>
+      <div class="chatbot-info">
+        <h4>مساعد زها</h4>
+        <span class="status">متصل الآن</span>
+      </div>
+      <button id="close-chatbot" class="close-chatbot">
+        <i class="fa-solid fa-times"></i>
+      </button>
+    </div>
+
+    <!-- Messages Container -->
+    <div id="chatbot-messages" class="chatbot-messages">
+      <div class="message assistant-message">
+        <div class="message-content">
+          مرحباً! أنا مساعد مركز زها الثقافي. كيف يمكنني مساعدتك اليوم؟
+        </div>
+        <div class="message-time" id="current-time"></div>
+      </div>
+    </div>
+
+    <!-- Input Area -->
+    <div class="chatbot-input">
+      <div class="input-container">
+        <textarea 
+          id="chatbot-input" 
+          placeholder="اكتب رسالتك هنا..." 
+          rows="1"
+        ></textarea>
+        <button id="send-button" class="send-button">
+          <i class="fa-solid fa-paper-plane"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </body>
 
 </html>
