--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <script src="js/framework-cda2f1305c3d9424.js" defer=""></script>
     <script src="js/main-627138c22ebf06ea.js" defer=""></script>
     <script src="js/_app-939fc81c9b33b38b.js" defer=""></script>
+    <script src="js/ScrollRect.jsx" defer=""></script>
     <script src="js/b637e9a5-72306854ad8c548c.js" defer=""></script>
     <script src="js/574-3e6def5898b0fc8d.js" defer=""></script>
     <script src="js/index-0d363d5b6d321cf0.js" defer=""></script>
     <script src="js/_buildManifest.js" defer=""></script>
     <script src="js/_ssgManifest.js" defer=""></script>
+    <script src="https://unpkg.com/@google/generative-ai/dist/generative-ai.js"></script>
     <title>Zaha's Teams</title>
     <link rel="icon" href="images/logo.png" type="image/png">
     <meta charset="utf-8">
