--- a/js/Admin.html
+++ b/js/Admin.html
@@ -342,10 +342,10 @@
 
         <!-- Header -->
         <header class="text-center mb-8 slide-up">
-            <h1 class="text-4xl font-bold text-gray-800 dark:text-white mb-4">Sheet Content Editor</h1>
+            <h1 class="text-4xl font-bold text-gray-800 dark:text-white mb-4">Zaha's Teams Program Website Editor</h1>
             <div class="glass-card-light p-4 inline-block">
                 <p class="text-gray-700 dark:text-gray-300">Displaying and editing data from a public Google Sheet ID:</p>
-                <div class="sheet-id mt-2 text-blue-600 dark:text-blue-300 font-bold">1_Y3ETDpkkBX_LOBSawAR5WYA3UHFxf8hOm_NQPZfghc</div>
+                <div class="sheet-id mt-2 text-blue-600 dark:text-blue-300 font-bold">Data Are Privet</div>
             </div>
         </header>
 
