--- a/Info.html
+++ b/Info.html
@@ -871,7 +871,7 @@ body.dark-mode .typing-indicator {
             z-index: 11111;
             position: fixed;
             top: 25px;
-            right: 25px;
+            left: 25px;
         }
 
         #menuToggle span {
